Reduce role dropdown font size and prevent text wrapping

--- a/src/app/components/admin/admin-scoring-model-memberships/admin-scoring-model-member-list/admin-scoring-model-member-list.component.scss
+++ b/src/app/components/admin/admin-scoring-model-memberships/admin-scoring-model-member-list/admin-scoring-model-member-list.component.scss
@@ -33,3 +33,16 @@ mat-paginator {
 .w-50 {
   width: 50%;
 }
+
+mat-select {
+  font-size: 14px;
+  width: 140px;
+}
+
+::ng-deep .mat-mdc-option {
+  font-size: 14px;
+}
+
+::ng-deep .mdc-list-item__primary-text {
+  white-space: nowrap;
+}
